# property-chatbot

./: app.py  dockerfile  index.css  index.html  index.js  pyproject.toml  requirements.txt
app/: genai_service.py  main.py
frontend/: index.css  index.html  index.js
